--- a/source/widget/Module.Follow/follow.less
+++ b/source/widget/Module.Follow/follow.less
@@ -1,7 +1,11 @@
 @charset "UTF-8";
 .ui_follow {
-    .btn-default {
-        background-color: #dfdfdf;
-        color: #fff;
-    }
+	.btn-default {
+		background-color: #ccd1d9;
+		color: #fff;
+		display: inline-block;
+		font-size: 12px;
+		line-height: 20px;
+		padding: 0 8px;
+	}
 }
