--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -609,6 +609,7 @@ ul,li{list-style: none;}
 			width: 100%;
 			dt {
 				text-align: center;
+				margin-bottom: 5px;
 				img{
 					border-radius: 50%;
 					width: 60px;
@@ -624,6 +625,11 @@ ul,li{list-style: none;}
 					color: #fff;
 					font-family: "SimSun";
 					font-size: 14px;
+				}
+				img{
+					width: 20px;
+					height: 20px;
+					margin-top: -4px;
 				}
 				em.icon-s-yverify{
 					font-style: normal;
