--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -38,7 +38,7 @@
 .find-teacher-hover-container{width:200px;height:200px;overflow: hidden;position: relative;margin: 17px auto 14px;}
 .find-teacher-photo{width: 200px;height: 200px;}
 .find-teacher-hover{position: absolute;width: 200px;height: 200px;}
-.find-teacher-follow{position: absolute;padding: 0;bottom: 10px;height: 20px;background-color: #ffbc3c;display: block;right: 10px;
+.find-teacher-follow{position: absolute;padding: 0;bottom: 10px;width: 50px;height: 20px;background-color: #ffbc3c;display: block;right: 10px;
   border-radius: 2px;font-size: 12px;text-align: center;line-height: 20px;color: #fff;cursor: pointer;}
 .find-teacher-have-followed{background-color: #dfdfdf;color:@c9;}
 .findBreadCrumb{margin-top: 17px}
