--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -591,6 +591,16 @@ ul,li{list-style: none;}
 	width: 375px;
 	border: none;
 	padding: 0;
+	.ui_follow {
+		.btn-default {
+			background-color: #ccd1d9;
+			color: #fff;
+			display: inline-block;
+			font-size: 12px;
+			line-height: 20px;
+			padding: 0 8px;
+		}
+	}
 	ul{
 		padding-left: 0 0 10px 0;
 	}
