--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -209,6 +209,9 @@ body{
 				margin-right: 10px;
 				font-family: "SimSun";
 				line-height: 21px;
+				&:hover{
+					color: #1e89e0;
+				}
 			}
 			.change-course{
 				color: #e74c3c;
@@ -411,6 +414,13 @@ body{
 .courseList.courseList-record{
 	.courseList-body .title-more{
 		margin-top: 65px;
+	}
+	.courseList-body .course-center{
+		width: 73%;
+	}
+	.more-service {
+		margin-left: 5px;
+		margin-top: 2px;
 	}
 }
 // 弹框
