--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -26,6 +26,9 @@ ul,li{list-style: none;}
 .course-yellow-label{
 	background: #ffbc3c;
 }
+.course-red-label{
+	background: #e60100;
+}
 .course-green-label{
 	background: #37bc9b;
 }
