--- a/source/widget/UserHome.gold/gold.css
+++ b/source/widget/UserHome.gold/gold.css
@@ -315,7 +315,7 @@ table tr td {
   left: 133px;
 }
 .gold-store-present-rank-focus {
-  color: #1e89e0;
+  color: #3bafda;
 }
 .gold-store-present-card-container {
   overflow: hidden;
