--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -51,7 +51,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-present-rank-by .glyphicon{top: 2px;}
 .gold-store-present-rank-new{width: 52px;margin-left: 5px;}
 .gold-store-new-arrow{position: absolute;left: 133px;}
-.gold-store-present-rank-focus{color: #1e89e0;}
+.gold-store-present-rank-focus{color: #3bafda;}
 .gold-store-present-card-container{overflow: hidden;width: 934px;margin-top: 10px;}
 .gold-exchange-present-card-container{overflow: hidden;width: 934px;}
 .gold-store-present-card-center{text-align: center;font-size: 14px;}
