--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -462,6 +462,10 @@ ul,li{list-style: none;}
 		}
 		p.course-teacher{
 			height: 22px;
+			.ui-username{
+				max-width: 70px;
+				overflow: hidden;
+			}
 		}
 		p.course-title{
 			.title-detail{
