--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -638,6 +638,8 @@ ul,li{list-style: none;}
 				line-height: 20px;
 				margin: 3px 0;
 				text-align: center;
+				overflow: hidden;
+				color: #fff;
 				a {
 					color: #fff;
 					font-family: "SimSun";
