--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -57,6 +57,16 @@ ul,li{list-style: none;}
 	width: 100%;
 	padding: 12px 12px 20px;
 	overflow: hidden;
+	.ui_follow {
+		.btn-default {
+			background-color: #ccd1d9;
+			color: #fff;
+			display: inline-block;
+			font-size: 12px;
+			line-height: 20px;
+			padding: 0 8px;
+		}
+	}
 	.btn{
 		.border-radius(2px);
 		margin-bottom: 0;
