Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -817,7 +817,6 @@
     .font-family;
     color: @font-color;
     .border-radius(4px);
-    border-bottom: 1px solid #eaeaea;
     a {
         outline: none;
         &:focus {
@@ -858,7 +857,7 @@
                 }
                 &.current {
                     a {
-                        color: #2599c4;
+                        color: #1e89e0;
                     }
                 }
             }
