--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -16,9 +16,9 @@
 .find-teacher-rank-title span img{margin-left: 5px;}
 .find-teacher-intro{line-height: 0;font-size: 0;}
 .find-teacher-account{padding-left: 27px;padding-top: @pt;display: inline-block;float:right;color: @c9;em{color: #e74c3c;font-style: normal;}margin-right: 15px;}
-.find-teacher-list-container{overflow: hidden;width: 100%;margin-top: -1px;margin-bottom: -1px;}
-.find-teacher-list .find-teacher-card:nth-child(4){border-right:0}
-.find-teacher-card{width:25%;border-right: @borderf6;border-bottom: @borderf6;float: left;}
+.find-teacher-list-container{overflow: hidden;width: 100%;margin-top: -1px;border-left:@borderf6;}
+.find-teacher-list .find-teacher-card:nth-child(1){border-left:0;}
+.find-teacher-card{width:25%;border: @borderf6;border-left:0;float: left;margin-top: -1px;}
 .find-teacher-information{position:relative;margin: 0 auto;width: 200px;height: 46px;border-bottom: @borderf6;}
 .find-teacher-name{margin-top: 14px;font-size: 24px;color: #333333;display: inline-block;}
 .find-teacher-v{margin-bottom: -1px;vertical-align: bottom;}
@@ -45,7 +45,7 @@
 .findClassRight{padding: 0;}
 .findRightList{margin-bottom: 20px;}
 .findRightTitle{font-size: 16px;color: #666;display: inline-block;margin-bottom: 10px;}
-.find-teacher-list{overflow: hidden;border: 1px solid #eaeaea;margin-top: -1px;}
+.find-teacher-list{overflow: hidden;margin-top: -1px;}
 .find-teacher-rank-by{background-color:#fff;border-right:1px solid #eaeaea;}
 .find-teacher-rank-by .find-teacher-rank-by:nth-child(1){border-right:0;}
 //.row{margin: 0;}
