--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -59,16 +59,17 @@
   overflow: hidden;
   width: 100%;
   margin-top: -1px;
-  margin-bottom: -1px;
+  border-left: 1px solid #f6f6f6;
 }
-.find-teacher-list .find-teacher-card:nth-child(4) {
-  border-right: 0;
+.find-teacher-list .find-teacher-card:nth-child(1) {
+  border-left: 0;
 }
 .find-teacher-card {
   width: 25%;
-  border-right: 1px solid #f6f6f6;
-  border-bottom: 1px solid #f6f6f6;
+  border: 1px solid #f6f6f6;
+  border-left: 0;
   float: left;
+  margin-top: -1px;
 }
 .find-teacher-information {
   position: relative;
@@ -187,7 +188,6 @@
 }
 .find-teacher-list {
   overflow: hidden;
-  border: 1px solid #eaeaea;
   margin-top: -1px;
 }
 .find-teacher-rank-by {
