--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -21,7 +21,7 @@
 .find-teacher-card{width:25%;border: @borderf6;border-left:0;float: left;margin-top: -1px;}
 .find-teacher-information{position:relative;margin: 0 auto;width: 200px;height: 46px;border-bottom: @borderf6;}
 .find-teacher-name{margin-top: 14px;font-size: 24px;color: #333333;display: inline-block;}
-.find-teacher-v{margin-bottom: -1px;vertical-align: bottom;}
+.find-teacher-v{margin-bottom: -1px;margin-left:10px;vertical-align: bottom;}
 .find-teacher-sort{font-size: @fs12;color: #999999;position: absolute;right: 0;top: 15px;}
 .find-teacher-course{margin: @margin;font-size: 14px;margin-top: 20px;height: 40px;}
 .find-teacher-recommend-course{color: @c9;}
