--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -608,16 +608,6 @@ ul,li{list-style: none;}
 	width: 375px;
 	border: none;
 	padding: 0;
-	.ui_follow {
-		.btn-default {
-			background-color: #ccd1d9;
-			color: #fff;
-			display: inline-block;
-			font-size: 12px;
-			line-height: 20px;
-			padding: 0 8px;
-		}
-	}
 	ul{
 		padding-left: 0 0 10px 0;
 	}
@@ -740,6 +730,15 @@ ul,li{list-style: none;}
 	}
 	.dialog-down-wrap {
 		overflow: hidden;
+		.dialog-border{
+			height: 56px;
+			.dialog-down{
+				height: 56px;
+				line-height: 56px;
+				padding: 0;
+				border-bottom: none;
+			}
+		}
 		.dialog-down {
 			position: relative;
 			border-bottom: 1px solid #e5e5e5;
