--- a/source/widget/Public.Module/courses_dialog.less
+++ b/source/widget/Public.Module/courses_dialog.less
@@ -105,7 +105,8 @@
         
         .dialog_handle, .dialog_content_wrap {
             background-color:#FFF;
-            border: 1px solid #e5e5e5
+            border: 1px solid #e5e5e5;
+            padding: 1px;
         }
     }
     
