Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -770,6 +770,10 @@
             &.current {
                 a {
                     border-bottom: 2px solid #1e89e0;
+                    &:hover{
+                        color:#000;
+                        cursor: default;
+                    }
                 }
             }
         }
@@ -828,6 +832,14 @@
             a{
                 &:hover{
                     color:#1e89e0
+                }
+            }
+        }
+        .personCenterFresh.current{
+            a{
+                &:hover{
+                    color:#333333;
+                    cursor: default;
                 }
             }
         }
