--- a/source/widget/Public.Selector/selector.less
+++ b/source/widget/Public.Selector/selector.less
@@ -53,7 +53,7 @@
     }
     /* 覆盖bootstrap默认设置end */
     
-    background-color: rgb(255,255,255);
+    background-color: #fcfcfc;
     border: 1px solid rgb(241,242,246);
     dl{
         margin-bottom: 0;
@@ -70,12 +70,12 @@
             .choiceTip;
         }
         .choice-items{//右侧选项
-            cursor: pointer;
+            
             height:30px;
             padding-top: 10px;
             padding-bottom: 10px;
             .choice-item-each{//单个选项
-                
+                cursor: pointer;
                 line-height: 1;
                 .choiceSetting;
             }
