--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -2,6 +2,10 @@
   padding: 0;
   margin: 0;
 }
+.breadcrumb {
+  margin-bottom: 0;
+  padding: 10px 15px;
+}
 .find-teacher-container {
   width: 100%;
   border: 1px solid #eaeaea;
