--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -6,6 +6,9 @@
   margin-bottom: 0;
   padding: 10px 15px;
 }
+#module-breadcrumb {
+  margin-bottom: 0;
+}
 .find-teacher-container {
   width: 100%;
   border: 1px solid #eaeaea;
