--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -8,6 +8,7 @@
 @margin:0 17px;
 .body{padding: 0;margin: 0;}
 .breadcrumb{margin-bottom:0;padding: 10px 15px;}
+#module-breadcrumb{margin-bottom:0;}
 .find-teacher-container{width: @width;border: @borderea;}
 .find-teacher-rank-title{width: @width;height: 38px;font-size: @fs12;border: @borderea;background-color: #fcfcfc;margin-top: 20px;}
 .find-teacher-rank-focus {color: #1e89e0;}
