--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -189,6 +189,7 @@ a,button,.btn{
 
 #module-breadcrumb {
     background-color: transparent;
+    margin-bottom: 9px;
     >.active {
         color: #1e89e0;
     }
