--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -66,6 +66,11 @@ ul,li{list-style: none;}
 			line-height: 20px;
 			padding: 0 8px;
 		}
+		.follow_add{
+			display: inline-block;
+			line-height: 20px;
+			padding: 0 8px;
+		}
 	}
 	.btn{
 		.border-radius(2px);
