v1变成蓝色图标

--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -273,7 +273,7 @@ ul.grade-list {
         margin-right:15px;
         cursor: pointer;
         &.active {
-           border-bottom:2px solid @btn-primary;
+           border-bottom:2px solid @link-hover;
            color: @btn-primary;
        }
    }
