--- a/source/widget/Mall.indexTrends/ui-trends.less
+++ b/source/widget/Mall.indexTrends/ui-trends.less
@@ -20,7 +20,7 @@
 		height: 40px;
 		line-height: 50px;
 		overflow: hidden;
-		border-bottom: 1px dashed #ccc;
+		border-bottom: 1px dotted #ccc;
 		margin:0 auto 10px;
 		span {
 			display: inline-block;
@@ -53,6 +53,7 @@
 		overflow: hidden;
 		.media-info-text {
 			line-height: 180%;
+            margin-left:10px;
 			strong {
 				color: #cc0000;
 			}
@@ -112,6 +113,7 @@
 				height: 36px;
 				margin-right: 10px;
 				font-size: 16px;
+                border-radius: 2px;
 			}
 			.btn-into-home {
 				width: 96%;
