--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -41,6 +41,7 @@
                 width: 100%;
                 line-height: 30px;
                 padding-left: 12px;
+                color: #666;
             }
         }
         &.hover {
@@ -66,6 +67,7 @@
         margin-bottom: 0;
         padding: 0;
         background-color: transparent;
+        color: #666;
         li {
             height: 30px;
         }
