--- a/source/widget/Public.MiniCart/minicart.less
+++ b/source/widget/Public.MiniCart/minicart.less
@@ -23,7 +23,7 @@
         position: relative;
         a {
                 float: left;
-                padding-left: 15px;
+                padding-left: 10px;
                 color: #666;
             }
         .fa {
@@ -106,9 +106,9 @@
                     &:nth-last-child(1){
                         border-bottom: 0 none;
                     }
-                    em {
-                        padding: .2em 1em .3em;
-                    }
+//                    em {
+//                        padding: .2em 1em .3em;
+//                    }
                     .course-info {
                         .course-title {
                             line-height: 24px;
@@ -143,7 +143,7 @@
         .minicart-footer {
             background: #fcfcfc;
             overflow: hidden;
-            padding: .5em 1em;
+            padding: .5em 1.5em .5em 1em;
             .minicart-total {
                 line-height: 2.4em;
                 padding: 0 .3em;
