--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -120,7 +120,7 @@
 	   width: 590px;overflow: hidden;margin-left: 10px;
 	   h2.coures-name-title {
 	   		line-height: 180%;font-size: 18px;overflow: hidden;padding-left: 10px;margin:10px 0;
-           em {font-size: 16px;}
+           em {font-size: 16px;color: #cc0000;}
 	   }
 	   .attend-class-time {
 	   	overflow: hidden;
