--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -234,6 +234,7 @@
 	border: 1px solid #ccc;
 	display: none;
 	height: 0;
+	box-shadow: 0 4px 15px #ccc inset;
 	position: absolute;
 	width: 290px;
 	z-index: 900;
@@ -253,9 +254,9 @@
 
 }
 .window_detail {
-	height: 100px;
+	height: 70px;
 	margin: 0 5px;
-	padding: 15px 5px 10px;
+	padding: 10px 5px 10px;
 	font-size: 12px;
 	font-family: "SimSun";
 	span{
