--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -28,15 +28,18 @@
         float: left;
         display: inline-block;
         clear: both;
-        margin-left: 110px;
+        width: 750px;
+        margin: 0 auto;
         .hp-recommend{
             display:none;
+            width: 540px;
+            margin: 0 auto;
             .hpr-box{
                 width: 540px;
                 height: 400px;
                 overflow:auto;
                 overflow-x:hidden;
-                margin-bottom: 35px;
+                margin-bottom: 30px;
                 img{
                     width: 70px;
                     height: 70px;
@@ -61,13 +64,13 @@
             }
             .hpr-btn{
                 margin-left: 15px;
-                bottom: 150px;
             }
         }
         .hp-local{
             display: none;
             position: relative;
-            margin-left: 60px;
+            width: 420px;
+            margin: 0 auto;
             .img-error{
                 position: absolute;
                 bottom: -35px;
@@ -255,4 +258,3 @@
         }
     }
 }
-
