Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -13,6 +13,7 @@
     height: 100px;
     margin: 0 auto;
     position: relative;
+    overflow: hidden;
     .h-logo {
         float: left;
         width: 350px;
