Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -410,6 +410,7 @@
     //height: 145px;
     font-size: 12px;
     .center-teacher-verify {
+        display:inline-block;
         .verify-up-left;
         border-right: none;
         background: url("img/teacher-verify.png") no-repeat;
