--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -13,7 +13,7 @@
     height: 100px;
     margin: 0 auto;
     position: relative;
-    overflow: hidden;
+    clear: both;
     .h-logo {
         float: left;
         width: 350px;
