--- a/source/widget/Public.Nav/nav.less
+++ b/source/widget/Public.Nav/nav.less
@@ -13,6 +13,7 @@
     height: 45px;
     margin: 0 auto;
     font-size: 14px;
+    border-bottom: 1px solid #eee;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
     position: relative;
     z-index: 4;
@@ -106,11 +107,13 @@
     .category-dd {
         display: none;
         height: 380px;
-        background-color: rgba(30, 137, 224, .9);
+        background-color: #1E89E0;
+        background-color: rgba(30, 137, 224, .9) !important;
         .category-item {
             height: 75px;
             padding: 18px 10px 18px 10px;
-            border-bottom: 1px solid rgba(255, 255, 255, .2);
+            border-top: 1px solid #3A98E4;
+            border-top: 1px solid rgba(255, 255, 255, .2) !important;
             h3 {
                 margin: 0;
                 font-size: 14px;
@@ -139,7 +142,8 @@
             left: 200px;
             top: 45px;
             height: 380px;
-            border: 1px rgba(30, 137, 224, .9) solid;
+            border: 1px solid #1E89E0;
+            border: 1px rgba(30, 137, 224, .9) solid !important;
             border-left: 0;
             background-color: #f5f5f5;
             color: #333;
