--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -445,6 +445,7 @@
     height: 105px;
     font-size: 12px;
     .center-stud-verify {
+        display: inline-block;
         .verify-up-left;
         background: url("img/stud-verify.png") no-repeat;
     }
