--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -15,7 +15,7 @@
 .live-course-box img{width: 271px;height: 198px;}
 .live-teacher-photo{margin-top: 11px;}
 .live-course-title{height: 30px;width: 245px;position: absolute;bottom: 0;background-color: #000;opacity: 0.5;filter:alpha(opacity=50);}
-.live-course-show-title{height: 30px;width: 245px;position: absolute;bottom: 0;color: #fff;font-size: 14px;text-align: center;line-height: 30px;}
+.live-course-show-title{height: 30px;width: 245px;position: absolute;bottom: 0;color: #fff;font-size: 14px;text-align: center;line-height: 30px;overflow: hidden;}
 .live-time-tip{width: 245px;background-color: #f9f9f9;color: #ed5565;}
 .live-time-tip-container{line-height: 30px;}
 .live-time-tip-container span{font-size: 16px;margin-left: 10px;}
