--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -79,8 +79,8 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .red-card-intro,.present-intro{display: block;margin-left: 372px;min-width: 230px;}
 .red-card-name,.present-name{display: block;font-size: 16px;margin: 10px 0;}
 .red-card-intro-name,.present-intro-name{font-size: 12px;margin: 18px 0;}
-.red-card-intro-name span,.present-intro-name span{vertical-align: bottom;line-height: 18px;}
-.red-card-intro-name span em,.present-intro-name span em{color: #e74c3c;font-weight: bold;}
+.red-card-intro-name span,.present-intro-name span{vertical-align: middle;line-height: 18px;display: inline-block;}
+.red-card-intro-name span em,.present-intro-name span em{color: #e74c3c;font-weight: bold;vertical-align: bottom;}
 .red-card-intro-title,.present-intro-title{color: #999;float: left;}
 .red-card-intro-title span,.present-intro-title span{margin-left: 12px;}
 .red-card-dec,.present-dec{display: inline-block;margin-right: 10px;vertical-align: middle;width: 16px;height: 16px;background-color: #b5b5b5;border-radius: 18px;position: relative;cursor: pointer;}
