--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -106,7 +106,7 @@
 
 	// 课程视频----左侧
 	.course-left-player {
-		overflow: hidden;
+		overflow: hidden;margin-left:5px;
 		.video-images-player {
 			width: 340px;height: 340px;
 		}
@@ -222,7 +222,7 @@
 	   }
 	   //直播回放样式
 	   &.course-video-back {
-			.course-content-text {height: 60px;}
+			.course-content-text {height:auto;overflow: hidden;}
 			.course-content-teacher {
 				height: 80px; overflow: hidden;
 				span.f-left {
