--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -103,6 +103,7 @@
         .topleft-bar {
             width: 410px;
             &>li:first-child{
+                float: left;
                 em.text-danger {
                     max-width: 230px;
                     height: 30px;
@@ -112,7 +113,7 @@
             }
         }
         .topright-bar {
-            width: 770px;
+            width: 780px;
             height: 30px;
             text-align: right;
         }
