--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -7,6 +7,7 @@
     padding-bottom: 20px;
     height: 100%;
     background-color: #bed0fc;
+    overflow: hidden;
 }
 
 .centerHeader-teacher {
@@ -24,6 +25,7 @@
     height: 100%;
     background: url('img/stuBack.jpg') top center no-repeat;
     background-color: #a2cfe4;
+    overflow: hidden;
     .row{
         margin-left: 0;
         margin-right: 0;
@@ -813,6 +815,7 @@
 }
 
 .centerHeader-teacher{
+    overflow: hidden;
     .filter-public-tab {
         display: block;
         overflow: hidden;
