--- a/source/widget/UM.all.order/all.order.less
+++ b/source/widget/UM.all.order/all.order.less
@@ -1,5 +1,5 @@
 .ao-content{
-    width: 1010px;
+    width: 100%;
     margin: 0 auto;
     ul{
         display: inline-block;
@@ -64,27 +64,30 @@
             .ao-subtitle{
                 float: left;
                 width: 100%;
-                margin: 0;
                 padding: 15px 0;
                 border-bottom: 1px solid #eaeaea;
                 background-color: #fff;
                 li{
                     float: left;
+                    width: 30%;
                     font-size: 12px;
                     color: #333;
                     p{
-                        margin:0 55px 0 18px;
+                        margin: 0 0 0 15px;
                         font-size: 12px;
                         color: #999;
                     }
-                    span{
-                        margin-right: 335px;   
+                    span{  
                     }
                     em{
                         font-style: normal;
                         font-weight: bold;
                         color: #e74c3c;
                     }
+                }
+                .order-time{
+                    float: right;
+                    margin-right: 15px;
                 }
             }
             ul{
@@ -213,14 +216,12 @@
                     font-size: 16px;
                 }
                 .ao-second{
-                    width: 155px; 
+                    width: 12%; 
                     margin-top: 26px;   
                 }
                 .ao-third{
-                    width: 152px;
-                    margin-top: 26px;
-                    padding-right: 24px; 
-                    _padding-right: 2px;               
+                    width: 16%;
+                    margin-top: 26px;             
                 }
             }
         }
