--- a/source/widget/UM.certificate/certificate.less
+++ b/source/widget/UM.certificate/certificate.less
@@ -1,7 +1,7 @@
 .certificate-content{
-    width: 650px;
+    width: 66%;
     height: 290px;
-    margin: 0 auto;
+    margin: 40px auto 0;
     .certificate-content-left{
         float: left;
         width: 322px;
@@ -14,10 +14,10 @@
         }
     }
     .certificate-content-right{
-        float: right;
+        float: left;
         width: 310px;
         height: 175px;
-        margin-top: 30px;
+        margin: 30px 0 0 5px;
         .error-box{
             display: block;  
             height: 30px;
