--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -1,6 +1,4 @@
 .hp-content{
-    width: 990px;
-    margin: 0 auto;
     ul{
         height: 30px;
         margin: 5px 0 60px 0;
@@ -28,7 +26,7 @@
         float: left;
         display: inline-block;
         clear: both;
-        width: 750px;
+        width: 75%;
         margin: 0 auto;
         .hp-recommend{
             display:none;
@@ -70,6 +68,7 @@
             display: none;
             position: relative;
             width: 420px;
+            height: 450px;
             margin: 0 auto;
             .img-error{
                 position: absolute;
@@ -193,7 +192,7 @@
             }
             .hpl-btn{
                 position: absolute;
-                bottom: -70px;
+                bottom: 40px;
                 &:focus{
                     outline: none;
                 }
@@ -208,13 +207,11 @@
         }
     }
     .hp-box-right{
-        float: right;
+        float: left;
         width: 210px;
         height: 460px;
         padding-left: 38px;
-        margin-right: 20px;
         border-left: 1px solid #eaeaea;
-        font-size: 12px;
         color: #666;
         h4{
             font-size: 12px;
