--- a/source/widget/UM.Basic.information/basic-information.less
+++ b/source/widget/UM.Basic.information/basic-information.less
@@ -1,12 +1,12 @@
 .bi-content{
-    width: 880px;
     height: 100%;
+    padding: 0 85px;
+    margin: 40px 0 30px;
     overflow: hidden;
-    margin: 0 0 30px 100px;
     .bi-left{
         float: left;
         position: relative;
-        margin-top: 40px;
+        width: 415px;
         .message-error{
             display: none;
             position: absolute;
@@ -105,7 +105,6 @@
         float: right;
         width: 295px;
         height: 140px;
-        margin-top: 40px;
         background: url('img/basic-bg.png') no-repeat;
         span{
             display: inline-block;
