--- a/source/widget/UM.card.activation/card.activation.less
+++ b/source/widget/UM.card.activation/card.activation.less
@@ -1,5 +1,5 @@
 .ca-content{
-    width: 625px;
+    width: 65%;
     height: 290px;
     margin: 60px auto 0;
     .ca-content-left{
@@ -14,10 +14,10 @@
         }
     }
     .ca-content-right{
-        float: right;
+        float: left;
         width: 310px;
         height: 175px;
-        margin-top: 30px;
+        margin: 30px 0 0 5px;
         .error-box{
             display: block;  
             width: 210px;
