--- a/source/widget/UM.card.learn/card.learn.less
+++ b/source/widget/UM.card.learn/card.learn.less
@@ -27,8 +27,8 @@
         clear: both;
         .cl-learn{
             .cl-content{
-                width: 625px;
                 height: 290px;
+                width: 70%;
                 margin: 0 auto;
                 .cl-content-left{
                     float: left;
@@ -42,10 +42,10 @@
                     }
                 }
                 .cl-content-right{
-                    float: right;
+                    float: left;
                     width: 310px;
                     height: 175px;
-                    margin-top: 30px;
+                    margin: 30px 0 0 15px;
                     .error-box{
                         display: block;  
                         height: 30px;
@@ -88,6 +88,7 @@
                 }
             }
             .prompt-box{
+                clear: both;
                 .prompt{
                     position: relative;
                     width: 75px;
@@ -98,7 +99,7 @@
                 .cl-prompt-box{
                     background: #fff8eb;
                     border-radius: 5px;
-                    padding: 10px 0 20px 20px;
+                    padding: 10px 10px 20px 20px;
                     h3{
                         font-size: 14px;
                         font-family: "Microsoft YaHei";
