课程详情页

--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -509,7 +509,7 @@
 		}
 		.comment_func {
 			overflow:hidden;height:50px;
-			.comment_tips {display: none;float:left;color:#cc0000;line-height:30px;}
+			.comment_tips {display: none;float:left;line-height:30px;}
 			.comment_button {
 					float:right;
 					.btn_submit {width:70px;height:30px;line-height:20px;margin-top:5px;}
@@ -525,7 +525,7 @@
         left: 395px; 
         bottom: 0;
         opacity : 0;
-        background: url("http://img04.xesimg.com/add_gold.png") no-repeat;
+        background: url("img/add_gold.png") no-repeat;
 		p {
             width:105px;
             height: 20px;
