学习中心和学霸

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -813,6 +813,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 					background: url("img/exclamation.png") no-repeat right center;
 					vertical-align: middle;
 					padding-right: 24px;
+					display: inline-block;
 					
 				}
 				em.mark{
