Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -173,7 +173,7 @@ div.dialog_arrow.arrow_tl {
 }
 
 .pop_student_medal .medal_upgrade .upgrade {
-    width: 40px;
+    width: 55px;
     background: url('http://img04.xesimg.com/icon/up_icon.png') no-repeat;
     padding-left: 15px;
     margin-top: 15px;
@@ -185,6 +185,11 @@ div.dialog_arrow.arrow_tl {
     color: #999;
 }
 
+.pop_student_medal .medal_upgrade .upgrade_number strong{
+    font-weight:normal;
+    color:red;
+}
+
 .pop_student_medal .medal_upgrade .upgrade_bar {
     width: 236px;
     height: 9px;
@@ -192,7 +197,7 @@ div.dialog_arrow.arrow_tl {
     position: absolute;
     left: 55px;
     top: 20px;
-    z-index: 10;
+    z-index: 20;
 }
 
 .pop_student_medal .medal_upgrade .upgrade_bar span {
