Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.sidebar/sidebar.less
+++ b/source/widget/UserHome.sidebar/sidebar.less
@@ -4,6 +4,7 @@
     position: fixed;
     width: 60px;
     margin-left: 3%;
+    top: 135px;
     .btn {
         height: 90px;
         font-size: 14px;
