--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -814,6 +814,8 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 					vertical-align: middle;
 					padding-right: 24px;
 					display: inline-block;
+					height: 18px;
+					line-height: 18px;
 					
 				}
 				em.mark{
