--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -138,7 +138,7 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr='rgba(0, 0, 0, 0)', endColorStr='rgba(0, 0, 0, 0.85)', gradientType='0');
+  filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr='#00000000', endColorStr='#000000E5', gradientType='0');
   background: -webkit-gradient(linear, 0% 65%, 0% 100%, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.85)));
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.85) 100%);
   background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.85) 100%);
