--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -34,7 +34,7 @@
 .find-teacher-data-statistics{margin-right: 20px;}
 .find-teacher-data-statistics img{margin-right: 10px;}
 .find-teacher-photo-hover{position: absolute;width: 200px;height: 200px;
-  filter:alpha(opacity=0 finishopacity=100 style=1)progid:DXImageTransform.Microsoft.Gradient(startColorStr='rgba(0, 0, 0)',endColorStr='rgba(0, 0, 0)',gradientType='0');
+  filter:progid:DXImageTransform.Microsoft.Gradient(startColorStr='#00000000',endColorStr='#000000E5',gradientType='0');
   background: -webkit-gradient(linear, 0% 65%, 0% 100%, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.85)));
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.85) 100%);
   background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.85) 100%);
