--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -134,6 +134,11 @@
 .find-teacher-data-statistics img {
   margin-right: 10px;
 }
+.find-teacher-hover-a {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+}
 .find-teacher-photo-hover {
   position: absolute;
   width: 200px;
