--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -481,6 +481,18 @@ ul,li{list-style: none;}
 				max-width: 70px;
 				overflow: hidden;
 			}
+			.btn-followed{
+				background-color: #ccd1d9;
+				color: #fff;
+				display: inline-block;
+				font-size: 12px;
+				line-height: 20px;
+				padding: 0 8px;
+				&:hover{
+					background-color: #ccd1d9;
+					color: #fff;
+				}
+			}
 		}
 		p.course-title{
 			.title-detail{
