--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -130,7 +130,7 @@
 	   	  ul {
 	   	  	width: 510px; overflow: hidden;
 	   	  	li {
-	   	  		float:left;width: 235px;height:30px; line-height: 30px;border:1px solid #dcdcdc;text-align: center;list-style: none;padding:1;cursor: pointer;overflow: hidden;margin:0 10px 10px 0;
+	   	  		float:left;width: 245px;height:30px; line-height: 30px;border:1px solid #dcdcdc;text-align: center;list-style: none;padding:1;cursor: pointer;overflow: hidden;margin:0 10px 10px 0;
 	   	  		&.current {
 						border:2px solid #1e89e0;padding:0;background: url(img/icon_infor.png) right bottom no-repeat;
 	   	  		}
@@ -297,7 +297,7 @@
                                 p{
                                     font-size: 14px;margin:0 0 0 10px;
                                     &.info {
-                                        line-height: 180%;font-size: 12px;
+                                        line-height: 180%;font-size: 12px; color: #999;
                                     }
                                 }
                             }
@@ -502,7 +502,7 @@
  */
 .comment_form {
 	overflow:hidden;background: #f3f3f3 ;padding:20px;margin-bottom: 20px;
-		.comment_title {height:30px;line-height:30px;}
+		.comment_title {height:30px;line-height:30px;font-weight: bold;color: #666;}
 		.comment_textarea {
 			overflow:hidden;
 			textarea {width:100%;height:100px;padding:5px; border:1px solid #ccc;}
