--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -89,9 +89,9 @@ body {
 div.dialog_arrow.arrow_tl {
     width: 15px;
     background-image: url("img/dialog_arrow_t.png");
+    background-repeat: no-repeat;
     position: absolute;
     height: 10px;
-    z-index:100;
 }
 .pop_student_medal .student_medal_con {
     overflow: hidden;
