--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -138,6 +138,8 @@
   width: 200px;
   height: 200px;
   display: inline-block;
+  *zoom: 1;
+  *display: inline;
 }
 .find-teacher-photo-hover {
   position: absolute;
