--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -138,8 +138,7 @@
   width: 200px;
   height: 200px;
   display: inline-block;
-  *zoom: 1;
-  *display: inline;
+  border: 1px solid #fff6de;
 }
 .find-teacher-photo-hover {
   position: absolute;
