--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -138,7 +138,7 @@
   width: 200px;
   height: 200px;
   display: inline-block;
-  border: 1px solid #fff6de;
+  *border: 1px solid #fff6de;
 }
 .find-teacher-photo-hover {
   position: absolute;
