--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -135,10 +135,10 @@
   margin-right: 10px;
 }
 .find-teacher-hover-a {
+  float: left;
   width: 200px;
   height: 200px;
   display: inline-block;
-  *border: 1px solid #fff6de;
 }
 .find-teacher-photo-hover {
   position: absolute;
