--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -504,6 +504,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 				display: inline-block;
 				width: 357px;
 				border: none;
+				float: left;
 				p{
 					color: #666;
 					font-size: 12px;
