--- a/source/widget/Public.Header/header.less
+++ b/source/widget/Public.Header/header.less
@@ -43,6 +43,7 @@
             outline: 0 none;
             padding: 4px 10px;
             background: #fff;
+            height:36px\0;
         }
         .btn-search {
             width: 70px;
