--- a/source/widget/UM.Nav/nav.less
+++ b/source/widget/UM.Nav/nav.less
@@ -1,5 +1,8 @@
+.container{
+    min-width: 1200px !important;
     .user-manage-side {
-        width: 130px !important;
+        float: left;
+        width: 150px !important;
         padding: 8px 0 0 10px;
         #side-nav {
             margin: 0;
@@ -28,7 +31,8 @@
         }
     }
     .user-manage-body {
-        width: 1050px !important;
+        float: right;
+        min-width: 1050px;
         .panel {
             border-color: #FFF;
             margin-bottom: 20px;
@@ -48,3 +52,4 @@
             }
         }
     }
+}
