--- a/source/widget/UM.bill/bill.less
+++ b/source/widget/UM.bill/bill.less
@@ -1,7 +1,7 @@
 .bill-none-content{
     width: 440px;
     height: 100px;
-    margin: 0 auto;
+    margin: 150px auto 0;
     img{
         _float: left;
     }
