--- a/source/widget/Mall.FindTeacher/find-teacher.css
+++ b/source/widget/Mall.FindTeacher/find-teacher.css
@@ -136,12 +136,7 @@
 }
 .find-teacher-hover-a {
   position: absolute;
-  width: 200px;
-  height: 200px;
-  background: -webkit-gradient(linear, 0% 65%, 0% 100%, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.85)));
-  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.85) 100%);
-  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.85) 100%);
-  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.85) 100%);
+  bottom: 0;
 }
 .find-teacher-hover-container {
   width: 200px;
