--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -88,7 +88,7 @@ body {
 }
 div.dialog_arrow.arrow_tl {
     width: 15px;
-    background-image: url("img/dialog_arrow_t.png");
+    background-image: url("img/dialog_arrow_theader.png");
     background-repeat: no-repeat;
     position: absolute;
     height: 10px;
