--- a/source/widget/UM.address/ui-address.css
+++ b/source/widget/UM.address/ui-address.css
@@ -149,6 +149,7 @@
   margin-right: 10px;
   height: 36px;
   border: 1px solid #d2d2d2;
+  padding: 9px 2px\0;
 }
 .new_consignee_items .info_from p .btn {
   width: 172px;
