--- a/source/widget/UM.address/ui-address.less
+++ b/source/widget/UM.address/ui-address.less
@@ -82,7 +82,7 @@
 				&.text {line-height: 35px;}
 			}
 			.select {
-				display: inline;margin-right: 10px;height: 36px;border:1px solid #d2d2d2;
+				display: inline;margin-right: 10px;height: 36px;border:1px solid #d2d2d2;padding:9px 2px\0;
 			}
 			.btn {width:172px;color:#FFF;line-height:35px;text-decoration: none;font-size: 16px;background: #3bafda;}
 			.error_tips_address {
