--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -32,6 +32,13 @@
 	margin-top: 20px;
 	overflow: hidden;
 }
+.glory_container_wrap{
+	background: #f1f2f6;
+	.screen-rank{
+		margin-bottom: 15px;
+		margin-top: 20px;
+	}
+}
 .none-content{
 	float: left;
 	position: relative;
@@ -140,6 +147,7 @@
 	li{
 		margin-bottom: 15px;
 		position: relative;
+		background: #fff;
 	}
 	.glory-water{
 		padding: 0 9px;
