--- a/source/widget/UM.Basic.information/basic-information.less
+++ b/source/widget/UM.Basic.information/basic-information.less
@@ -1,8 +1,7 @@
 .bi-content{
-    height: 100%;
+    height: 590px;
     padding: 0 85px;
-    margin: 40px 0 30px;
-    overflow: hidden;
+    margin-top: 40px;
     .bi-left{
         float: left;
         position: relative;
