--- a/source/widget/UM.Basic.information/basic-information.less
+++ b/source/widget/UM.Basic.information/basic-information.less
@@ -44,8 +44,14 @@
                 width: 73px;
                 height: 34px;
                 padding-left: 7px;
+                padding: 6px 0 6px 6px\9;
                 color: #a0a0a0;
                 border: 1px solid #d2d2d2;
+            }
+            @media screen and (min-width: 0px){
+                select{
+                    padding: 0 0 0 7px;
+                }
             }
             span{
                 color: #333;
