Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -997,6 +997,7 @@
 .fresh-dialog--modal-verification{
     .modal-dialog{
        width: 395px;
+       overflow: hidden;
     }
 }
 .fresh-dialog-verificationCode{
